# median

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: ci.yml
median/: _engine.py  _index.py  _storage.py  cli.py  client.py  init.py
scripts/: bench.py
tests/: test_basic.py  test_cli.py  test_index.py
