[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "median"
version = "0.1.0"
description = "A tiny, free, embeddable JSON database with indexes"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourname/median"
Repository = "https://github.com/yourname/median"
Issues = "https://github.com/yourname/median/issues"

[project.scripts]
median = "median.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["median"]
